--- a/기초 📄/05. 메서드.md
+++ b/기초 📄/05. 메서드.md
@@ -109,10 +109,91 @@ public class ReturnDemo{
 ```java
 public class EchoDemo{
   public static void main(String []args){
-    ehco()
+    ehco("안녕!",3);
+  }
+  public static void echo(String s,int n){
+    for (int i=0;i<n;i++)
+      System.out.println(s);
   }
 }
 ```
+
+
+
+```java
+public class IncrementDemo {
+    public static void main(String []args){
+        int x=0;
+        System.out.println("increment() 메서드를 호출하기 전의 x"+x);
+        increment(x);
+        System.out.println("increment() 메서드를 호출한 후에 x"+x);
+    }
+
+    public static void increment(int n){
+        System.out.println("increment() 메서드를 시작할 때의 n은 "+n);
+        n++;
+        System.out.println("increment() 메서드를 끝날 때의 n은 "+n);
+    }
+}
+```
+
+
+
+#### 메서드 오버로딩
+
+자바는 메서드 시그너처를 이용해 메서드를 구분한다. 메서드 시그니처는 메서드 이름과 매개변수 개수, 데이터 타입 , 순서를 의미한다. 메서드 이름이 동일하더라도 변수 개수, 데이터 타입, 순서 중 하나라도 다르면 서로 다른 메서드로 취급한다. 메서드 이름은 같지만 메서드 시그너처가 다른 메서드를 정의하는 것을 메서드 오버로딩 이라고 한다.
+
+하지만 반환 타입이 다르다고 메서드 오버로딩 할 수는 없다.
+
+```java
+public class OverloadingDemo{
+  public static void main(String []args){
+    int i1= 3, i2 = 7l i3 = 10;
+    double d1 = 7.0, d2 = 3.0;
+    
+    System.out.println("max(%d,%d) = %d\n",i1,i2,max(i1,i2));
+    System.out.println("max(%1f,%1f) = %.1f\n",d1,d2,max(d1,d2));
+    System.out.println("max(%d,%d,%d) = %d\n",i1,i2,i3,max(i1,i2,i3));
+    
+    public static int max(int n1, int n2){
+      int result = n1 > n2 ? n1 : n2;
+      return result;
+    }
+    
+    public static double max(double n1, double n2){
+      double result = n1 > n2 ? n1 : n2;
+      return result;
+    }
+    
+    public static void main(int n1,int n2,int n3){
+      return max(max(n1,n2),n3);
+    }
+  }
+}
+```
+
+
+
+##### 셀프테스트
+
+1.main() 메서드는 반환할 데이터가 없기 때문에 반환 타입으로 void 를 사용한다.
+
+2.메서드의 이름은 같지만 매개변수의 개수나 이름 타입 등을 다르게 정의하는 것을 오버로딩 이라고 한다.
+
+
+
+3.
+
+```java
+void oddPrint(int x){
+  
+  if(x % 2 == 1){
+    System.out.println(x);
+  }
+}
+```
+
+
 
 
 
