--- a/기초 📄/11. 예외와 예외 클래스.md
+++ b/기초 📄/11. 예외와 예외 클래스.md
@@ -25,7 +25,7 @@
 ```
 
 ```java
-2. ArrayIndexOutBoundsException -> 배열의 인덱스의 값을 초과하는 오류
+2. ArrayIndexOutOfBoundsException -> 배열의 인덱스의 값을 초과하는 오류
 
 public class ArrayIndexOutOfBoundsExceptionExample {
 	
@@ -267,3 +267,50 @@ public class MainTest2 {
   
 
   
+
+
+
+#### 예외 떠넘기기
+
++  경우에 따라 메소드를 호출한 곳으로 예외를 떠넘길 수도 있다.
++ thorws 키워드는 메소드 선언부 끝에 작성되어 메소드에서 처리하지 않은 예외를 호출한 곳으로 떠넘기는 역할
+
+```java
+리턴타입 메소드명(매게변수 ..) throws 예외클래스1,예외클래스2,...{
+    
+}
+```
+
+
+
+#### 사용자 정의 예외와 예외 발생
+
++ 사용자 정의 예외(애플리케이션 예외(Application Exception))
+
+```java
+public class XXX Exception extends [Exception | RuntimeException]{
+    public XXXException(){}
+    public XXXException(String message){super(message);}
+}
+```
+
+
+
+#### 예외 발생시키기
+
++ 사용자 정의 예외 또는 자바 표준 예외를 우리의 코드에서 발생시키는 방법
++ 예외 발생 코드를 가지고 있는 메소드는 내부에서 try-catch 블록으로 예외를 처리할 수 있지만, 대부분은 자신이 호출한 곳에서 예외를 처리하도록 throws 키워드로 예외를 떠넘긴다.
+
+```java
+public void method() throws XXXException{
+    throw new XXXException("메세지");
+}
+```
+
+
+
+#### 예외 정보 얻기
+
++ try블록에서 예외가 발생되면 예외 객체는 catch 블록의 매개 변수에서 참조하게 되므로 매개 변수를 이용하면 예외 객체의 정보를 알 수 있다.
++ 모든 예외 객체는 Exception 클래스를 상속하기 때문에
+
