[ADD] 외부접근 + 내부접근 + 생성자

--- a/MD 정리/07. 클래스의 구성 요소와 멤버 접근.md
+++ b/MD 정리/07. 클래스의 구성 요소와 멤버 접근.md
@@ -18,3 +18,200 @@
 
 #### 필드와 지역 변수
 
+필드는 메서드 내부를 제외한 클래스 내부의 어디든지 위치할 수 있다.
+
+필드 선언 = 기초 타입 변수 선언 => 명시적으로 초기화가 가능하다.
+
+지역 변수는 매개변수나 메서드 내부에서 선언된 변수이다.
+
+
+
+```java
+public class LocalVariableDemo{
+  public static void main(String []args){
+    int a = 0;
+    double b;
+    
+    //System.out.print(b); -> 초기화 하지 않고 사용할 수 없다.
+    //System.out.print(a+c); -> C 변수는 아직 선언이 안 되었기 때문에 사용할 수 없다.
+    
+    int c =0;
+    
+    //public double d = 0.0; -> 지역 변수는 public 으로 지정할 수 없다.
+    
+    for (int e = 0; e< 10; e++){
+      //int a = 1;  -> 3행에서 선언된 지역변수 이름이다. 블록이 달라도 같은 이름으로는 다시 선언할 수 없다 .
+      System.out.print(e);
+    }
+  }
+}
+```
+
+
+
+#### 클래스 내부에서 멤버 접근
+
+```java
+public class CircleDemo {
+    
+    static double radius;
+    
+    static double findArea(){
+        return 3.14 * radius * radius;
+        
+    }
+    
+    static void show(double x, double y){
+        System.out.printf("반지름 = %.1f, 넓이 = %.1f\n",x,y);
+    }
+    
+    public static void main(String []args){
+        radius = 10.0;
+        
+        double area = findArea();
+        
+        show(radius,area);
+    }
+}
+```
+
+
+
+
+
+#### 클래스 외부에서 멤버 접근
+
+다른 클래스에 있는 멤버를 사용하려면 해당 클래스의 객체를 먼저 사용해야 한다.
+
+메서드나 필드가 객체에 소속된 멤버이므로 객체가 없다면 접근할 수 없기 때문이다.
+
+
+
+클래스 외부에서 멤버 접근 방법
+
+```java
+myCircle.radius
+myCircle.findArea()
+```
+
+
+
+마침표(.)는 객체와 객체 멤버를 연결해주는 연산자로 배열 원소에 접근하는 대괄호([]) 연산자와 같이 우선순이가 가장 높다.
+
+인스턴스 변수는 객체마다 따로 있으며, 인스턴스 메서드라고 한다.
+
+
+
+```java
+public class Circle {
+    
+    static double radius;
+    
+    double findArea(){
+        return 3.14 * radius * radius;
+        
+    }
+    
+    void show(double x, double y){
+        System.out.printf("반지름 = %.1f, 넓이 = %.1f\n",x,y);
+    }
+    
+    public static CircleDemo{
+      public static void main(String []args){
+        Circle myCircle = new Circle();
+        
+        myCircle.radius = 10.0;
+        
+        mycircle.show(myCircle.radius,myCircle.findArea());
+      }
+    }
+}
+```
+
+
+
+### 접근자와 설정자 
+
+캡슐화는 클래스 멤버를 클래스 내부에 감추는 것이다. 클래스 멤버를 외부에서 조작할 수 없도록 은닉하기 위해 멤버 앞에 private를 적는다.
+
+클래스의 모든 멤버를 private 으로 지정하면 외부 클래스에서는 해당 클래스를 사용할 수 없다.
+
+따라서 클래스의 일부 멤버는 외부 클래스가 사용할 수 있도록 공개해야 한다.
+
+클래스 내부에는 **접근자**와 **설정자** 를 제공해야 한다. 
+
+접근자 : Getter / Accessors -> private으로 지정된 필드에 값을 가져옴
+
+설정자 : Mutators / Setters  -> 그 값을 수정함 
+
+```java
+class Circle {
+    private double radius;
+
+    public double getRadius(){
+        return radius;
+    }
+
+    public void setRadius(double r){
+        this.radius = r;
+    }
+
+    double findArea(){
+        return 3.14 * radius * radius;
+
+    }
+
+    void show(double x, double y){
+        System.out.printf("반지름 = %.1f, 넓이 = %.1f\n",x,y);
+    }
+
+   public static class CircleDemo{
+        public static void main(String []args){
+            Circle myCircle = new Circle();
+
+            myCircle.setRadius(10.0);
+
+            myCircle.show(myCircle.getRadius(),myCircle.findArea());
+        }
+
+   }
+}
+
+```
+
+```java
+public void setRadius(double r){
+  if(r >= 0)
+    radius = r;
+}
+```
+
+radius 에 음수처럼 잘못된 값을 대입하는 것을 사전에 차단할 수 있다.
+
+
+
+#### 생성자
+
+클래스로 객체를 생성할 때 객체의 필드를 초기화 해야 한다.
+
+클래스에서 필드를 초기화하면 값이 같은 객체만 생성할 수 있다. 하지만 클래스에서 필드를 초기화 하지 않는다면 기본 값으로 초기화된 객체만 생성할 수 있다.
+
+모든 클래스는 생성자를 하나 이상 꼭 가진다.
+
+```java
+class Circle{
+  private double radius;
+  
+  public Circle(double r){
+    radius = r;
+  }
+  
+  public class CircleDemo{
+    public static void main(String []args){
+      Circle myCircle = new Circle(10.0);
+      
+    }
+  }
+}
+```
+
