--- a/MD 정리/12. 기본 API 클래스.md
+++ b/MD 정리/12. 기본 API 클래스.md
@@ -167,3 +167,126 @@ public class KeyExample {
     + 쓰레기 객체를 순서대로 소멸시키지 않고, 무작위로 소멸 시킨다.
     + 쓰레기 객체를 전부 소멸시키는 것이 아니라 메모리의 상채를 보고 일부만 소멸시킨다.
 
+
+
+#### System 클래스
+
++ 자바 프로그램은 운영체제상에서 바로 실행되는 것이 아니라 JVM 위에서 실행된다.
++ 따라서 운영체제의 모든 기능을 자바 코드로 직접 접근하기란 어렵다.
++ 하지만 java.lang 패키지에 속하는 System클래스를 이용하면 운영체제의 일부 기능을 이용할 수 있다.
++ system 클래스의 모든 필드와 메소드는 정적필드와 정적메소드로 구성되어 있다.
+
+
+
+#### Class 클래스
+
++ 자바는 클래스와 인터페이스의 메타 데이터를 java.lang 패키지에 소속된 class클래스로 관리한다.
++ 여기서 **메타** 데이터란 클래스의 이름, 생성자 정보, 필드 정보, 메소드 정보를 말한다.
++ Class 객체를 이용하면 클래스의 생성자, 필드, 메소드 정보를 알아낼 수 있다.
+  + 이것을 리플렉션(Reflection) 이라고 한다.
+
+
+
+#### String 클래스
+
++ <생성자>
+
+  ```java
+  //배열 전체를 String 객체로 생성
+  String str = new String(byte[] bytes);
+  
+  //배열의 offset 인텍스 위치나 
+  ```
+
+  ```java
+  public class ConstructorTest{
+      public static void main(String []args){
+          byte[] bytes = {72,101,108,108,111,32,74,97,118,97};
+          
+          String str1 = new String(bytes);
+          System.out.println(str1);
+      }
+  }
+  ```
+
+  
+
+#### Wrapper 클래스
+
++ **포장 객체**  : 기본 타입의 값을 내부에 두고 포장한 객체
+
++ 포장 객체의 특징 : 포장하고 있는 기본 타입 값은 외부에서 변경 불가
+
+  | 기본 타입 | 포장 클래스 |
+  | --------- | ----------- |
+  | byte      | Byte        |
+  | char      | Character   |
+  | short     | Short       |
+  | int       | Integer     |
+  | long      | Long        |
+  | double    | Double      |
+  | boolean   | Boolean     |
+
+
+
++ **박싱(Boxing)** :기본 타입의 값을 포장 객체로 만드는 과정
+  + <방식방법>
+    + 포장 클래스의 생성자 이용
+      + 기본 타입의 값을 줄 경우
+        + Byte obj = new Byte(10);
+      + 문자열을 줄 경우
+        + Byte obj = new Byte("10");
+    + 정적 valueOf() 메소드 사용
++ **언방식(Unboxing)** : 포장 객체에서 기본 타입의 값을 얻어내는 과정
+  + <문자열을 기본 타입 값으로 변환>
+    + 대부분의 포장 클래스에서는 "parse + 기본타입" 명으로 되어 있는 정적 메소드가 있다.
+    + 이 메소드는 문자열을 매개값으로 받아 기본 타입 값으로 변환한다. 
+
+
+
+#### Arrays 클래스
+
++ Array 클래스의 모든 메소드는 정적이다.
+
+| 리턴타입  | 메소드 이름                            | 설명                                                         |
+| --------- | -------------------------------------- | ------------------------------------------------------------ |
+| 타겟 배열 | copyOf(원본배열, 복사할 길이)          | 원본배열의 0번 인덱스에서 복사할 길이만큼 복사한 배열 리턴, 복사할 길이는 원본 배열의 길이보다 커도 되며, 타켓의 배열의 길이가 된다. |
+| 타켓 배열 | copyOf(원본배열, 시작인덱스, 끝인덱스) | 원본 배열의 시작 인덱스에서 끝 인덱스까지 복사한 배열        |
+| boolean   | deepEquals(배열,배열)                  | 두 배열의 깊은 비교                                          |
+| boolean   | equals(배열,배열)                      | 두 배열의 앝은 비교                                          |
+| void      | sort(배열)                             | 배열의 전체 항목을 오름차순으로 정렬                         |
+| int       | binarySearch(배열, 찾는값)             | 전체 배열 항목에서 찾는 값이 있는 인덱스 정렬                |
+
+
+
+```java
+import java.util.Arrays;
+
+public class Car {
+	public static void main(String []args) {
+		char[] arr1 = {'J','A','V','A'};
+		
+		char[] arr2 = Arrays.copyOf(arr1, arr1.length);
+		System.out.println(Arrays.toString(arr2));
+		
+		char[] arr3 = Arrays.copyOfRange(arr1, 1,3);
+		System.out.println(Arrays.toString(arr3));
+		
+		char[] arr4 = new char[arr1.length];
+		System.arraycopy(arr1, 0, arr4, 0, arr1.length);
+		for(int i=0;i<arr4.length;i++) {
+			System.out.println("arr4[" + i + "J=" + arr4[i]);
+		}	
+	}
+}
+```
+
+
+
+
+
+#### Java.time 패키지
+
++ 자바 7이전까지는 Data와 Calendar 클래스를 이용해서 날짜와 시간 정보를 얻을 수 있다.
++ Date클래스의 대부분의 메소드는 Deprecated되었고, Date의 용도는 단순히 특정 시점의 날짜 정보를 저장하는 역할만한다.
++ Calendar 클래스는 날짜와 시간 정보를 얻기에는 충분하지만, 날짜와 시간을 조작하거나 비교하는 기능이 불충분하다.
