--- a/MD 정리/08. this와 this().md
+++ b/MD 정리/08. this와 this().md
@@ -86,3 +86,162 @@ class Person{
 ```
 
  
+
+#### 정적 멤버 
+
+같은 클래스의 객체끼리 공유할 데이터가 필요할 수 있습니다.
+
+예를 들어 생성한 객체 개수를 파악할 때는 모든 객체를 공유할 수 있는 변수가 있어야 한다.
+
+자바는 static 키워드로 클래스의 필드를 공유할 수 있도록 지원한다. 
+
+static 키워드로 지정되지 않은 필드는 공유되지 않고 인스턴스마다 자신의 필드를 생성하며, 이를 인스턴스 변수라고 한다.
+
+필드를 static 키워드로 지정하면 모든 인스턴스가 그 필드를 공유하며, 이를 정적 변수라고 한다.
+
+
+
+인스턴스 변수는 객체별로 관리된다. 객체를 생성할 때 인스턴스 변수를 생성하므로 객체를 생성한 후에야 접근할 수 있다. 객체가 소멸될 때, 자동으로 소멸된다.
+
+여러개 생성하면 여러 개가 생성된다.
+
+But, 정적 변수는 클래스 로더가 클래스를 메서드 영역에 적재할 때 생성하므로 객체 생성 전에도 접근할 수 있다. 그래서 생성 전에도 사용할 수 있다. 객체를 여러 개 생성해도 정적 변수는 하나뿐이며, 모든 객체가 공유하므로 **클래스 변수**라고 할 수 있다.
+
+
+
+인스턴스 메서드 = 객체 생성한 이후에만 사용 가능
+
+정적 메서드(클래스 메서드) = 객체 생성 전에도 사용 가능
+
++ 객체와 관련된 인스턴스 변수를 사용할 수 없다.
++ 객체와 관련된 인스턴스 메서드를 호출할 수 없다.
++ 객체 자신을 가리키는 this키워드를 사용할 수 없다.
+
+정적 메서드는 정적 변수가 지역 변수를 사용할 수 있다. 
+
+또 다른 정적 메서드를 호출할 수 있으며, 생성자 호출도 가능하다.
+
+
+
+#### 정적 멤버의 활용
+
+인스턴스 멤버와 달리 정적 멤버는 객체를 생성하기 전이라도 사용할 수 있기 때문에 일반적으로 객체 이름 대신에 클래스의 이름과 연결하여 사용한다. 
+
+```java
+클래스이름.정적변수이름
+클래스이름.정적메서드이름()
+```
+
+정적 변수의 대표적인 예는 상수이다.
+
+final 키워드는 객체마다 자신의 기억공간을 가진다. 
+
+상수는 값이 변경되지 않으므로 객체마다 따로 기억 공간을 할당할 필요가 없다.
+
+```java
+static final 데이터형  상수 = 초깃값 
+```
+
+**초깃값이 대입되면 더 이상 수정할 수 없다.**
+
+
+
+
+
+```java
+package Basic2;
+
+
+class Circle {
+    double radius;
+    static int numOfCircles = 0;
+    int numCircles = 0;
+
+
+    public Circle(double radius) {
+        this.numOfCircles++;
+        numCircles++;
+    }
+}
+
+public class CircleDemo {
+    public static void main(String[] args) {
+
+        Circle myCircle = new Circle(10.0);
+        Circle yourCircle = new Circle(5.0);
+
+        System.out.println("원의 개수 : " + Circle.numOfCircles);
+        System.out.println("원의 개수 : " + yourCircle.numCircles);
+
+    }
+
+    void print(){
+        System.out.println("인스턴스 메서드 입니다");
+    }
+}
+```
+
+ 정적 메서드의 대표적인 예는 main() 메서드 이다.
+
+JVM은 객체를 생성하지 않고도, main() 메서드를 호출할 수 있어야 하므로 main()은 정적 메서드가 되어야 한다.
+
+
+
+```java
+class Util{
+  static int fourTimes(int i ){
+    return i*4;
+  }
+}
+
+public class UtilDemo{
+  public static void main(String []args){
+    System.out.println(Util.fourTimes(5))
+  }
+}
+```
+
+
+
+#### 정적 블록 
+
+정적 변수는 인스턴스 변수처럼 선언과 동시에 초기화가 가능하다.
+
+인스턴스 변수는 생성자를 사용할 수 있지만, 정적 변수는 객체를 생성하기 전이므로 생성자로 초기화를 할 수 없다.
+
+정적 변수는 객체를 생성하기 전이므로 생성자로 초기화를 할 수 없으므로 정적 블록을 사용한다.
+
+```java
+static{...}
+```
+
+
+
+정적 블록도 정적 멤버처럼 클래스 로더가 클래스를 메서드 영역에 적재할 때 실행한다. 따라서 객체 생성 전에 실행되므로 정적 메서드처럼 유의하여 사용해야 한다.
+
+
+
+정적 메서드는 정적 변수와 지역 변수를 사용할 수 있다.
+
+그리고 또다른 정적 메서드를 호출할 수 있다. + 생성자도
+
+일단 관련된 인스턴스 변수 나 인스턴스 메서드는 사용 X
+
+
+
+Static 키워드를 사용하지 않고, 인스턴스마다 자신의 필드를 생성하는 것을 인스턴스 라고 한다.
+
+인스턴스가 그 필드를 공유하는 것을 정적 변수 라고 한다.
+
+인스턴스 멤버는 1 : n
+
+정적 멤버는 클래스 로더가 클래스를 메서드 영역에 적재
+
+
+
+```java
+static final 데이터형 상수 = 초깃값 
+```
+
+
+
