--- a/MD 정리/09-1. 배열.md
+++ b/MD 정리/09-1. 배열.md
@@ -156,3 +156,37 @@ scores = new int[] {100,90,50,95,85};
 배열이름[인덱스];
 ```
 
+
+
+#### 다차원 배열
+
+```
+int[][] scores = new int[3][5];
+```
+
+첫 번째 인덱스는 행 번호이며, 두 번째 인덱스는 열번호이다.
+
+자바는 크기가 유동적인 배열을 지원하려고 ArrayList 클래스를 제공한다.
+
+이는 인덱스를 이용하여 원소에 접근하기 때문에 배열과 비슷하다.
+
+프로그램 실행중에도 원소의 개수에 따라 자동으로 크기가 변경되므로 일종의 동적 배열이다.
+
+
+
+```java
+ArrayList<참조타입> 참조변수 = new ArrayList<>();
+```
+
+
+
+#### 배열 응용
+
+##### 배열을 위한 반복문
+
+```
+for ( 데이터타입 변수. : 배열_혹은_컬렉션 ){
+
+}
+```
+
