--- a/MD 정리/09-1. 배열.md
+++ b/MD 정리/09-1. 배열.md
@@ -185,8 +185,120 @@ ArrayList<참조타입> 참조변수 = new ArrayList<>();
 ##### 배열을 위한 반복문
 
 ```
-for ( 데이터타입 변수. : 배열_혹은_컬렉션 ){
+for ( 데이터타입 변수 : 배열_혹은_컬렉션 ){
 
 }
+```
+
+
+
+For-each 문은 배열이나 컬렉션의 모든 원소를 처음부터 하나씩 for-each 문의 변수에 대입 후에 처리한다.
+
+```java
+public class ForEachDemo {
+  public static void main(String []args){
+    Scanner in = new Scanner(System.in);
+    int scores[] = new int[5];
+    int sum = 0;
+    
+    for(int i=0;i<scores.length;i++){
+      scores[i] = in.nextInt();
+      
+      for(int s : scores)
+        sum += s;
+      
+      System.out.println("평균 = "+sum / 5.0);
+    }
+  }
+}
+```
+
+
+
+#### 메서드의 인수로 배열 전달
+
+배열도 메서드의 인수로 사용이 가능하다.
+
+
+
+```java
+public class IncrementDemo {
+    public static void main(String []args){
+        int[] x = { 0 };
+        System.out.println("호출 전의 x[0] = "+ x[0]);
+
+        increment(x);
+        System.out.println("호출 전의 x[0] = "+ x[0]);
+
+
+    }
+
+    public static void increment(int[] n) {
+        System.out.println("increment() 메서드 안에");
+        System.out.println("n[0] = "+ n[0] + "----->");
+        n[0] ++;
+        System.out.println("n[0] = "+ n[0]);
+    }
+}
+```
+
+
+
+#### 메인 메서드의 매개변수 전달
+
+```java
+public class MainArgumentDemo {
+    public static void main(String[] args) {
+        if (args.length == 2) {
+            int i = Integer.parseInt(args[1]);
+            nPrintln(args[0], i);
+        } else
+            System.out.println("어이쿠");
+    }
+
+    public static void nPrintln(String s, int n) {
+        for (int i = 0; i < n; i++) {
+            System.out.println(s);
+        }
+    }
+}
+```
+
+
+
+### 가변 개수 인수
+
+```java
+데이터타입 ... 변수
+```
+
+
+
+##### 가변 길이 인수 활용
+
+```java
+public class VarArgsDemo {
+    public static void main(String []args){
+        printSum(1,2,3,4,5);
+        printSum(10,20,30);
+
+    }
+    public static void printSum(int ...v){
+        int sum =0;
+        for(int i:v)
+            sum+=i;
+        System.out.println(sum);
+    }
+}
+```
+
+
+
+#### 객체의 배열
+
+객체도 배열의 원소로 사용할 수 있다. 객체 배열은 객체를 참조하는 주소를 원소로 구성하므로, 거의 모든 개발자가 편의상 객체 배열이라고 부르지만 사실으 객체 참조 변수의 배열이다.
+
+```java
+Ball[] balls = new Ball[5];
 ```
 
