--- a/MD 정리/13. lamda.md
+++ b/MD 정리/13. lamda.md
@@ -87,3 +87,76 @@ public class A{
 }
 ```
 
+
+
+#### 메소드 참조(Method References)
+
++ 메소드 참조 : 메소드를 참조해서 매개 변수의 정보 및 리턴 타입을 알아내어, 람다식에서 불필요한 매개 변수를 제거하는 것이 목적이다.
+
+```java
+람다식이 기존 메소드를 단순히 호출만 하는 경우
+  Math  클래스의 max() 정적 메소드를 호출하는 람다식
+  (left,right) -> Math.max(left,right);
+```
+
+> -> Math :: max()
+
+
+
++ 정적 메소드를 참조할 경우
+  + 클래스 이름 뒤에 :: 기호를 붙이고 정적 메소드 이름을 기술 
+    + 클래스 :: 메소드
+
+
+
+```java
+public class Calculator {
+
+    public static int staticMethod(int x, int y) {
+        return x + y;
+    }
+
+    public int instanceMethod(int x, int y) {
+        return x + y;
+    }
+}
+```
+
+
+
+```java
+import java.util.function.IntBinaryOperator;
+
+public class MethodReferencesExample {
+    public static void main(String[] args) {
+        IntBinaryOperator operator;
+
+        //정적메소드 참조
+        operator = (x, y) -> Calculator.staticMethod(x, y);
+        System.out.println("결과1: " + operator.applyAsInt(1, 2));
+
+        operator = Calculator::staticMethod;
+        System.out.println("결과2: " + operator.applyAsInt(3, 4));
+
+        //인스턴스 메소드 참조
+        Calculator obj = new Calculator();
+        operator = (x, y) -> obj.instanceMethod(x, y);
+        System.out.println("결과3: " + operator.applyAsInt(5, 6));
+
+        operator = obj::instanceMethod;
+        System.out.println("결과4: " + operator.applyAsInt(7, 8));
+
+    }
+}
+```
+
+
+
+#### 생성자 참조
+
++ 메소드 참조는 생성자 참조도 포함한다.
++ 단순히 객체를 생성하고 리턴하도록 구성된 람다식은 생성자 참조로 대치할 수 있다.
++ (a,b) -> (return new 클래스(a,b);) -> 생성자 참조로 표헌 -> 클래스 :: new
+
+
+
