[ADD] 타겟 타입과 함수적 인터페이스

--- a/MD 정리/13. lamda.md
+++ b/MD 정리/13. lamda.md
@@ -1,7 +1,5 @@
 ## 람다(lamba)
 
-
-
 #### 람다식이란?
 
 + 자바는 함수적 프로그래밍을 위해 자바 8부터 람다식을 지원한다
@@ -48,4 +46,44 @@ Runnable runnable = () -> {...};
 {타입 매개변수}는 오른쪽 중괄호 {} 블록을 실행하기 위해 필요한 값을 제공하는 역할을 한다.
 
 -> 기호는 매개 변수를 이용하여 중괄호를 실행한다는 뜻
+
+
+
+#### 타겟 타입과 함수적 인터페이스
+
+```java
+람다식은 인터페이스 변수에 대입된다.
+  
+인터페이스 변수 = 람다식
+```
+
++ 모든 인터페이스를 람다식의 타겟 타입으로 사용할 수는 없다.
+  + **람다식** 이 하나의 메소드를 정의하기 때문에 두 개 이상의 메소드가 선언된 인터페이스는 람다식을 이용해서 구현 객체를 생성할 수 있다.
++ 하나의 추상 메소드가 선언된 인터페이스민이 람다식의 타겟 타입이 될 수 있는데, 이러한 인터페이스를 **함수적 인터페이스** 라고 한다.
+
+
+
+```java
+interface B{
+    public int run(int x,int y);
+}
+
+public class A{
+    public static void main(String []args){
+
+        B b = (x,y) -> {return x+y;};
+        System.out.println(b.run(5,7));
+
+        b = (x,y) -> x+y;
+        System.out.println(b.run(5,7));
+
+        b = (x,y) -> sum(x,y);
+        System.out.println(b.run(3,2));
+    }
+
+    public static int sum(int x,int y){
+        return x+y;
+    }
+}
+```
 
